# k8s_prometheus_analyzer

./: .gitignore  PRODUCT_STRATEGY.md  README.md  implementation_plan.md  task.md  walkthrough.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
grafana/: dashboard.json
helm/k8s-prometheus-analyzer/: Chart.yaml  values.yaml
helm/k8s-prometheus-analyzer/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  grafana-dashboard.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
k8s-monitor/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  SECURITY.md  config.example.yaml  optimization_report.html  pyproject.toml  setup.py
k8s-monitor/k8s_prometheus_analyzer/: __init__.py  analyzer.py  cli.py  config.py  exceptions.py  exporter.py  fetcher.py  gitops.py  license.py  monitor.py  workload.py
k8s-monitor/k8s_prometheus_analyzer/alerting/: __init__.py  base.py  dispatcher.py  slack.py  webhook.py
k8s-monitor/k8s_prometheus_analyzer/reporter/: __init__.py  html_report.py  json_report.py  table.py
k8s-monitor/tests/: conftest.py  test_alerting.py  test_analyzer.py  test_cli.py  test_config.py  test_exporter.py  test_fetcher.py  test_gitops.py  test_html_report.py  test_license.py  test_workload.py
playbook/: README.md  day_1_2026_05_23.md  day_2_2026_05_24.md  mvp_launch_plan.md
