[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-prometheus-analyzer"
version = "0.2.0"
description = "CLI tool to analyse Kubernetes resource usage from Prometheus and generate optimisation recommendations, HTML reports, and Slack/webhook alerts."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rahul Bansod", email = "rahulbansod519@gmail.com"}
]
keywords = [
    "kubernetes", "k8s", "prometheus", "monitoring", "observability",
    "resource-optimization", "devops", "sre", "cloud-native", "cli",
    "alerting", "kube-state-metrics", "capacity-planning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.31.0",
    "tabulate>=0.9.0",
    "PyYAML>=6.0",
    "ruamel.yaml>=0.17.40",
    "urllib3>=2.0.0",
    "python-json-logger>=2.0.7",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "requests-mock>=1.11.0",
    "mypy>=1.7.0",
    "ruff>=0.3.0",
    "types-requests>=2.31.0",
    "types-tabulate>=0.9.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
k8s-analyze = "k8s_prometheus_analyzer.cli:main"

[project.urls]
Homepage      = "https://github.com/rahulbansod519/k8s_prometheus_analyzer"
Repository    = "https://github.com/rahulbansod519/k8s_prometheus_analyzer"
"Bug Tracker" = "https://github.com/rahulbansod519/k8s_prometheus_analyzer/issues"
Changelog     = "https://github.com/rahulbansod519/k8s_prometheus_analyzer/blob/main/k8s-monitor/CHANGELOG.md"

# ── Tool configuration ────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["k8s_prometheus_analyzer*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line-length enforced by formatter

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=k8s_prometheus_analyzer --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["tests/*", "k8s_prometheus_analyzer/monitor.py"]
